--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -249,14 +249,14 @@
                     <div class="heading_s1">
                         <h3>Produits Simulaires</h3>
                     </div>
-                    <div id="produits-similaires" data-margin="20" class="releted_product_slider carousel_slider owl-carousel owl-theme owl-loaded owl-drag">
+                    <div id="card-content" data-margin="15"
+                        data-responsive="{&quot;0&quot;:{&quot;items&quot;: &quot;2&quot;}, &quot;768&quot;:{&quot;items&quot;: &quot;3&quot;}, &quot;1199&quot;:{&quot;items&quot;: &quot;4&quot;}}"
+                        class="releted_product_slider carousel_slider owl-carousel owl-theme owl-loaded owl-drag">
                         <div class="owl-stage-outer">
-                            <div class="owl-stage"
-                                style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 1420px;">
-                                <div *ngFor="let currentProd of paginatedProduits " class="owl-item active"
-                                    style="width: 264px; margin-right: 20px;">
-                                    <div class="item">
-                                        <div class="product">
+                            <div class="row">
+                                <div class="col-6 col-md-3 mb-4" *ngFor="let currentProd of paginatedProduits " >
+                                    <div id="item-content" class="item">
+                                        <div id="form-content" class="product">
                                             <div class="product_img"><a href="#"><img [src]="currentProd.imageUrl"
                                                         alt="product_img1"></a>
                                                 <div class="product_action_box">
@@ -287,8 +287,7 @@
                                                     <div class="on_sale"><span>{{ currentProd | formatSoldeRate }} de
                                                             réduction</span></div>
                                                 </div>
-                                                <!-- nhjsj -->
-                                                <div class="cart_btn row g-2">
+                                                <!-- <div class="cart_btn row g-2">
                                                     <div class="col-12 col-md-6">
                                                         <button type="button" (click)="ajouterAuPanier($event)"
                                                             class="btn btn-fill-out btn-addtocart w-100 py-2 btn-sm-text d-inline-flex align-items-center justify-content-center">
@@ -301,7 +300,7 @@
                                                             <i class="fas fa-hand-holding-usd me-2"></i> Acheter
                                                         </button>
                                                     </div>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
@@ -316,24 +315,25 @@
                                 <i class="ion-ios-arrow-right"></i>
                             </button>
                         </div> -->
-                        <div class="pagination-container text-center mt-3">
-                            <ul class="pagination justify-content-center">
-                                <li class="page-item" [class.disabled]="currentPage === 1">
-                                    <a id="precedent" class="page-link" (click)="goToPage(currentPage - 1)">Précédent</a>
-                                </li>
 
-                                <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index"
-                                    [class.active]="currentPage === i + 1">
-                                    <a class="page-link" (click)="goToPage(i + 1)">{{ i + 1 }}</a>
-                                </li>
-
-                                <li class="page-item" [class.disabled]="currentPage === totalPages">
-                                    <a id="Suivant" class="page-link" (click)="goToPage(currentPage + 1)">Suivant</a>
-                                </li>
-                            </ul>
-                        </div>
                         <!-- <div class="owl-dots"><button role="button" class="owl-dot active"><span></span></button><button
                                 role="button" class="owl-dot"><span></span></button></div> -->
+                    </div>
+                    <div class="pagination-container text-center mt-3">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item" [class.disabled]="currentPage === 1">
+                                <a id="precedent" class="page-link" (click)="goToPage(currentPage - 1)">Précédent</a>
+                            </li>
+
+                            <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index"
+                                [class.active]="currentPage === i + 1">
+                                <a class="page-link" (click)="goToPage(i + 1)">{{ i + 1 }}</a>
+                            </li>
+
+                            <li class="page-item" [class.disabled]="currentPage === totalPages">
+                                <a id="Suivant" class="page-link" (click)="goToPage(currentPage + 1)">Suivant</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
