--- a/src/app/components/product-item/product-item.component.css
+++ b/src/app/components/product-item/product-item.component.css
@@ -1,3 +1,15 @@
 .btn-sm-text {
   font-size: 0.8rem;
 }
+
+@media (max-width: 768px) {
+    #card-content .row {
+  margin-left: -2px;
+  margin-right: -2px;
+}
+#card-content .col-6 {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+}
