--- a/src/app/components/single-product/single-product.component.css
+++ b/src/app/components/single-product/single-product.component.css
@@ -58,6 +58,15 @@
 }
 
 @media (max-width: 768px) {
+    #card-content .row {
+  margin-left: -2px;
+  margin-right: -2px;
+}
+#card-content .col-6 {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
 }
 
 
