--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -254,7 +254,7 @@
                         class="releted_product_slider carousel_slider owl-carousel owl-theme owl-loaded owl-drag">
                         <div class="owl-stage-outer">
                             <div class="row">
-                                <div class="col-6 col-md-3 mb-4" *ngFor="let currentProd of paginatedProduits " >
+                                <div id="owl-stage" class="col-6 col-md-3 mb-4" *ngFor="let currentProd of paginatedProduits " >
                                     <div id="item-content" class="item">
                                         <div id="form-content" class="product">
                                             <div class="product_img"><a href="#"><img [src]="currentProd.imageUrl"
