--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-banner [banners] = "banners"></app-banner>
 <div class="main_content">
-    <div class="section small_pt pb_40">
+    <div class="section small_pt">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6">
