--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,7 +1,7 @@
 <div class="product">
     <div class="product_img">
         <img [attr.alt]="'Image:' + produitDAO?.designation" [src]="produitDAO?.imageUrl">
-
+        
         <div class="product_action_box">
             <ul class="list_none pr_action_btn">
                 <li>
@@ -31,20 +31,19 @@
                 {{produitDAO?.prixRegulier! | formatMontant}}
             </del>
             <div class="on_sale">
-                <span> {{ produitDAO | formatSoldeRate }} de réduction</span>
+                <span> - {{ produitDAO | formatSoldeRate }} </span>
             </div>
         </div>
         <div class="cart_btn row g-2">
-            <div class="col-12 col-md-6">
+            <div class="d-flex gap-2">
                 <button type="button" (click)="ajouterAuPanier($event)"
-                    class="btn btn-fill-out btn-addtocart w-100 py-2 btn-sm-text d-inline-flex align-items-center justify-content-center">
-                    <i class="icon-basket-loaded me-2"></i> Panier
+                    class="btn btn-fill-out btn-addtocart flex-fill py-2 btn-sm-text d-inline-flex align-items-center justify-content-center">
+                    <i class="icon-basket-loaded me-2"></i>
                 </button>
-            </div>
-            <div class="col-12 col-md-6">
+
                 <button type="button" (click)="ajouterAuPanierAcheter($event)"
-                    class="btn btn-fill-out w-100 py-2 btn-sm-text d-inline-flex align-items-center justify-content-center">
-                    <i class="fas fa-hand-holding-usd me-2"></i> Acheter
+                    class="btn btn-fill-out flex-fill py-2 btn-sm-text d-inline-flex align-items-center justify-content-center">
+                    <i class="fas fa-hand-holding-usd me-2"></i>
                 </button>
             </div>
         </div>
