--- a/src/app/components/product-item-list/product-item-list.component.html
+++ b/src/app/components/product-item-list/product-item-list.component.html
@@ -38,13 +38,13 @@
             <ul class="list_none pr_action_btn">
                 <li class="add-to-cart" (click)="addToCart($event)">
                     <a href="#"><i class="icon-basket-loaded"></i>
-                        Ajouter au panier
+                        panier
                     </a>
                 </li>
                 <li class="add-to-cart">
                     <a (click)="ajouterAuPanierAcheter($event)">
                         <i class="fas fa-hand-holding-usd"></i>
-                        Acheter maintenant
+                        Acheter
                     </a>
                 </li>
             </ul>
