--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -16,18 +16,21 @@
                                             <option value="popularity">Trier par popularité</option>
                                             <option value="date">Trier par nouveauté</option>
                                             <option value="price">Trier par prix : du moins cher au plus cher</option>
-                                            <option value="price-desc">Trier par prix : du plus cher au moins cher</option>
+                                            <option value="price-desc">Trier par prix : du plus cher au moins cher
+                                            </option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="product_header_right">
                                     <div class="products_view">
-                                        <a  (click)="handleSetDisplay($event)" class="shorting_icon grid" 
-                                        [ngClass]="{active: isGrid}">
-                                            <i class="ti-view-grid"></i></a>
                                         <a (click)="handleSetDisplay($event)" class="shorting_icon list"
-                                        [ngClass]="{active: !isGrid}">
-                                            <i class="ti-layout-list-thumb"></i></a>
+                                            [ngClass]="{active: !isGrid}">
+                                            <i class="ti-layout-list-thumb"></i>
+                                        </a>
+                                        <a (click)="handleSetDisplay($event)" class="shorting_icon grid"
+                                            [ngClass]="{active: isGrid}">
+                                            <i class="ti-view-grid"></i>
+                                        </a>
                                     </div>
                                     <div class="custom_select">
                                         <select class="form-control form-control-sm">
@@ -40,37 +43,43 @@
                                 </div>
                             </div>
                         </div>
-                    </div> 
-                    <div class="row shop_container list" *ngIf="!isGrid">
-                        <div class="col-md-4 col-6" *ngFor="let produitDAO of productsList">
-                            <app-product-item-list [produitDAO]="produitDAO"></app-product-item-list>
-                        </div>
                     </div>
                     <div class="row shop_container grid" *ngIf="isGrid">
-                        <div class="col-md-4 col-6" *ngFor="let produitDAO of productsList">
-                            <app-product-item [produitDAO]="produitDAO"></app-product-item>
-                        </div>
+                    <div class="col-5 col-sm-6 col-md-4 col-lg-3"
+                        *ngFor="let produitDAO of productsList">
+                        <app-product-item [produitDAO]="produitDAO"></app-product-item>
                     </div>
+                    </div>
+
+                    <div class="row shop_container list" *ngIf="!isGrid">
+                    <div class="col-12 col-sm-6 col-md-4" 
+                        *ngFor="let produitDAO of productsList">
+                        <app-product-item-list [produitDAO]="produitDAO"></app-product-item-list>
+                    </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-12">
                             <ul class="pagination mt-3 justify-content-center pagination_style1">
                                 <li class="page-item active"><a class="page-link" href="#">1</a></li>
                                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                                 <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link" href="#"><i class="linearicons-arrow-right"></i></a></li>
+                                <li class="page-item"><a class="page-link" href="#"><i
+                                            class="linearicons-arrow-right"></i></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-first mt-4 pt-2 mt-lg-0 pt-lg-0 ">
-                    <div class="sidebar" >
+                    <div class="sidebar">
                         <div class="widget">
-                            <h5 class="widget_title" >Catégories</h5>
+                            <h5 class="widget_title">Catégories</h5>
                             <ul class="widget_categories" *ngIf="categorieStock.length > 0">
-                                <li *ngFor="let categorie of categorieStock" 
-                                [ngClass]="{active: categorieSlug === categorie.categorieStock.slug}">
-                                    <a [routerLink]="['/shop/categorie',categorie.categorieStock.slug]"><span class="categories_name">
-                                        {{categorie.categorieStock.nom}}</span>
+                                <li *ngFor="let categorie of categorieStock"
+                                    [ngClass]="{active: categorieSlug === categorie.categorieStock.slug}">
+                                    <a [routerLink]="['/shop/categorie',categorie.categorieStock.slug]"><span
+                                            class="categories_name">
+                                            {{categorie.categorieStock.nom}}</span>
                                         <span class="categories_num">({{categorie.produitList.length}})</span>
                                     </a>
                                 </li>
@@ -122,7 +131,7 @@
                                 </li>
                             </ul>
                         </div> -->
-                      
+
                     </div>
                 </div>
             </div>
