--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -44,18 +44,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row shop_container grid" *ngIf="isGrid">
-                    <div class="col-5 col-sm-6 col-md-4 col-lg-3"
-                        *ngFor="let produitDAO of productsList">
-                        <app-product-item [produitDAO]="produitDAO"></app-product-item>
+                    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 shop_container grid" *ngIf="isGrid">
+                        <div class="col" *ngFor="let produitDAO of productsList">
+                            <app-product-item [produitDAO]="produitDAO"></app-product-item>
+                        </div>
                     </div>
-                    </div>
-
                     <div class="row shop_container list" *ngIf="!isGrid">
-                    <div class="col-12 col-sm-6 col-md-4" 
-                        *ngFor="let produitDAO of productsList">
-                        <app-product-item-list [produitDAO]="produitDAO"></app-product-item-list>
-                    </div>
+                        <div class="col-12 col-sm-6 col-md-4" *ngFor="let produitDAO of productsList">
+                            <app-product-item-list [produitDAO]="produitDAO"></app-product-item-list>
+                        </div>
                     </div>
 
                     <div class="row">
