--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -31,7 +31,7 @@
                 {{produitDAO?.prixRegulier! | formatMontant}}
             </del>
             <div class="on_sale">
-                <span> - {{ produitDAO | formatSoldeRate }} </span>
+                <span> {{ produitDAO | formatSoldeRate }} Réduction </span>
             </div>
         </div>
         <div class="cart_btn row g-2">
