--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -62,7 +62,7 @@
 
                             <div class="product_sort_info">
                                 <ul>
-                                    <li><i class="linearicons-shield-check"></i> Garantie d'un an sur la marque HP
+                                    <li><i class="linearicons-shield-check"></i> Garantie d'un an sur la marque
                                     </li>
                                     <li><i class="linearicons-sync"></i> Politique de retour de 30 jours </li>
                                     <li><i class="linearicons-bag-dollar"></i> Paiement à la livraison disponible </li>
@@ -82,11 +82,11 @@
                             <div class="cart_btn">
                                 <button type="button" class="btn btn-fill-out btn-addtocart"
                                     (click)="addToCart($event)">
-                                    <i class="icon-basket-loaded"></i> Ajouter au panier
+                                    <i class="icon-basket-loaded"></i> Panier
                                 </button>
                                 <button (click)="ajouterAuPanierAcheter($event)" type="button"
                                     class="btn btn-fill-out btn-addtocart">
-                                    <i class="fas fa-hand-holding-usd"></i> Acheter maintenant
+                                    <i class="fas fa-hand-holding-usd"></i> Acheter
                                 </button>
                             </div>
                             <div class="cart_btn"><a href="#" class="add_compare"><i class="icon-shuffle"></i></a><a
