--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -45,27 +45,35 @@
                         </div>
                     </div>
                     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 shop_container grid" *ngIf="isGrid">
-                        <div class="col" *ngFor="let produitDAO of productsList">
+                        <div class="col" *ngFor="let produitDAO of paginatedProducts">
                             <app-product-item [produitDAO]="produitDAO"></app-product-item>
                         </div>
                     </div>
+
                     <div class="row shop_container list" *ngIf="!isGrid">
-                        <div class="col-12 col-sm-6 col-md-4" *ngFor="let produitDAO of productsList">
+                        <div class="col-12 col-sm-6 col-md-4" *ngFor="let produitDAO of paginatedProducts">
                             <app-product-item-list [produitDAO]="produitDAO"></app-product-item-list>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-12">
-                            <ul class="pagination mt-3 justify-content-center pagination_style1">
-                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link" href="#"><i
-                                            class="linearicons-arrow-right"></i></a></li>
-                            </ul>
-                        </div>
+                    <!-- 🔹 Pagination -->
+                    <div class="pagination-container text-center mt-3" *ngIf="totalPages > 1">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item" [class.disabled]="currentPage === 1">
+                                <a id="precedent" class="page-link" (click)="goToPage(currentPage - 1)">Précedent</a>
+                            </li>
+
+                            <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index"
+                                [class.active]="currentPage === i + 1">
+                                <a class="page-link" (click)="goToPage(i + 1)">{{ i + 1 }}</a>
+                            </li>
+
+                            <li class="page-item" [class.disabled]="currentPage === totalPages">
+                                <a id="Suivant" class="page-link" (click)="goToPage(currentPage + 1)">Suivant</a>
+                            </li>
+                        </ul>
                     </div>
+
                 </div>
                 <div class="col-lg-3 order-lg-first mt-4 pt-2 mt-lg-0 pt-lg-0 ">
                     <div class="sidebar">
